[gd_scene load_steps=24 format=3 uid="uid://byn05ifcf08j0"]

[ext_resource type="Script" uid="uid://cl6va5r1rwfhc" path="res://scripts/inventory_slot.gd" id="1_kscix"]
[ext_resource type="Texture2D" uid="uid://b505or0e1jjpi" path="res://assets/ui/ui.png" id="2_ru537"]
[ext_resource type="Texture2D" uid="uid://dcj5vu84onw8c" path="res://assets/sprites/items.png" id="3_r4ab7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ab7"]
atlas = ExtResource("2_ru537")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bngwc"]
atlas = ExtResource("3_r4ab7")
region = Rect2(0, 0, 24, 24)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gd4e4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bngwc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uda2d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hytmx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r4ab7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uda2d"]
atlas = ExtResource("2_ru537")
region = Rect2(256, 64, 192, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hytmx"]
atlas = ExtResource("2_ru537")
region = Rect2(256, 64, 192, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd4e4"]
atlas = ExtResource("2_ru537")
region = Rect2(256, 128, 128, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bswxb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v55gw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vx73v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_adagh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bxf2p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wmsr3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_onxkp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oo8lb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3p6w8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o0n8h"]

[node name="InventorySlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -309.0
offset_bottom = -159.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kscix")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_r4ab7")
stretch_mode = 2

[node name="ItemIcon" type="Sprite2D" parent="TextureRect"]
position = Vector2(16, 16)
texture = SubResource("AtlasTexture_bngwc")

[node name="ItemQuantity" type="Label" parent="TextureRect"]
layout_mode = 1
offset_left = 5.0
offset_top = 2.0
offset_right = 11.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 10
text = "1"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_gd4e4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_bngwc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uda2d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hytmx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_r4ab7")

[node name="DetailsPanel" type="TextureRect" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_top = 32.0
offset_right = 192.0
offset_bottom = 96.0
mouse_filter = 0
texture = SubResource("AtlasTexture_uda2d")
stretch_mode = 2

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 35.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 10
text = "Tên: "

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 24.0
offset_right = 37.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 10
text = "Loại: "

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 39.0
offset_right = 61.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 10
text = "Hiệu ứng: "

[node name="UsagePanel" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="TextureRect" type="TextureRect" parent="UsagePanel"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = -59.5
offset_right = 96.5
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_hytmx")

[node name="VBoxContainer" type="VBoxContainer" parent="UsagePanel/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -21.0
offset_right = 80.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureDropButton" type="TextureRect" parent="UsagePanel/TextureRect/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_gd4e4")

[node name="DropButton" type="Button" parent="UsagePanel/TextureRect/VBoxContainer/TextureDropButton"]
z_index = 1
layout_mode = 2
offset_left = 4.0
offset_top = 3.0
offset_right = 161.0
offset_bottom = 28.0
size_flags_vertical = 4
mouse_filter = 1
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxEmpty_bswxb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_v55gw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vx73v")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_adagh")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bxf2p")
text = "Bỏ đi"

[node name="TextureUseButton" type="TextureRect" parent="UsagePanel/TextureRect/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_gd4e4")

[node name="UseButton" type="Button" parent="UsagePanel/TextureRect/VBoxContainer/TextureUseButton"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -12.0
offset_right = 75.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
mouse_filter = 1
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxEmpty_wmsr3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_onxkp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_oo8lb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3p6w8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_o0n8h")
text = "Sử dụng
"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="mouse_entered" from="UsagePanel/TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="UsagePanel/TextureRect" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="pressed" from="UsagePanel/TextureRect/VBoxContainer/TextureDropButton/DropButton" to="." method="_on_drop_button_pressed"]
[connection signal="pressed" from="UsagePanel/TextureRect/VBoxContainer/TextureUseButton/UseButton" to="." method="_on_use_button_pressed"]
